# FlowPulse

./: .editorconfig  .env.example  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  VERIFICATION.md  commitlint.config.js  deploy.bat  llms.txt  pyproject.toml  start.bat  verify.ps1
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: main.py  requirements.txt  runtime.py  stadium_config.py
backend/agents/: adk_runtime.py  attendee_agent.py  comms_agent.py  config.py  forecast_agent.py  operations_agent.py  orchestrator_agent.py  prompts.py  routing_agent.py  safety_agent.py  schemas.py  tools.py
backend/api/: routes_agent.py  routes_auth.py  routes_csp.py  routes_fcm.py  routes_ops.py  routes_sim.py  routes_zones.py  ws.py
backend/core/: engine.py  events.py  graph.py  logging.py  scoring.py  zone.py
backend/observability/: bigquery.py  metrics.py  tracing.py
backend/security/: auth.py  headers.py
backend/sim/: simulator.py
backend/tests/: conftest.py  test_api.py  test_attendee_location.py  test_attendee_session.py  test_engine.py  test_fcm.py  test_graph.py  test_observability.py  test_ops_apply.py  test_orchestrator_agent.py  test_property_scoring.py  test_scoring.py  test_simulator_phases.py  test_tools.py  test_ws_diffs.py  test_ws_endpoint.py
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  BENCHMARKS.md  BLOG.md  DEMO.md  DEPLOYING.md  SECURITY.md  VIDEO-SCRIPT.md
docs/adr/: 0001-stadium-as-flow-system.md  0002-grounded-tool-calling.md  0003-cloud-run-over-gke.md  0004-synchronous-safety-agent.md  0005-gemini-3-1-flash-lite-default.md
frontend/: .eslintrc.json  .prettierignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/hi/: page.tsx
frontend/app/map/: page.tsx
frontend/app/ops/: page.tsx
frontend/components/: AccessibleModeToggle.tsx  ChatPanel.tsx  FlowScoreGauge.test.tsx  FlowScoreGauge.tsx  NavLinks.tsx  OpsActionFeed.test.tsx  OpsActionFeed.tsx  StadiumMap.tsx  Toast.tsx  ZoneCard.test.tsx  ZoneCard.tsx
frontend/components/__snapshots__/: FlowScoreGauge.test.tsx.snap  OpsActionFeed.test.tsx.snap  ZoneCard.test.tsx.snap
frontend/e2e/: a11y.spec.ts  smoke.spec.ts
frontend/hooks/: useAccessibleMode.ts
frontend/lib/: api.ts  scoring.test.ts  scoring.ts  types.ts  ws.ts
frontend/public/: manifest.webmanifest
infra/: Dockerfile.backend  Dockerfile.frontend  deploy.ps1  deploy.sh  docker-compose.yml
infra/terraform/: .gitignore  README.md  main.tf
scripts/: verify_live.py
tests/load/: locustfile.py
